ooo-build-2.0.4.16

    + bug fixes:
	+ better workaround for media:// files (Jan)
	+ crashes when trying to open an exported mail (Florian)
	+ random crashes when loading .docx documents (Florian, Tor)
	+ pictures disappeared when saved documents loaded from .docx (Florian)
    + Win32 build (Tor):
	+ support for odf-converter, version 0.0.9
	+ versioning (Tor)

ooo-build-2.0.4.15

    + speed up:
	+ bin problematic thread stack size optimization (Petr, Michael)
    + bug fixes:
	+ pre/post-processing capability shows progress (Florian)
	+ crash when loading some documents (Michael)
    + Win32 build (Tor):
	+ some ODMA fixes
	+ some build fixes
	+ some installer fixes
	+ new empty documents
	+ odf-converter bits:
	    + support the version 0.0.9
	    + force the conversion order
	    + .docx association & registration

ooo-build-2.0.4.14

    + features:
	+ pixel precise desktop icons (Jakub, Petr)
    + bug fixes:
	+ more fixes for pre/post-processing capability (Florian)

ooo-build-2.0.4.13

    + speed up:
	+ use --hash-style=gnu linking when supported (Michael, Petr)
	+ -BDirect linking also on x86_64 when supported (Michael, Petr)
    + bug fixes:
	+ key/mouse input ignored in slideshow during media playback (Radek)
	+ impress navigator icons transparency (Michael)

ooo-build-2.0.4.12

    + bug fixes:
	+ crashes and performance problems during slide-show (Radek, Michael)

ooo-build-2.0.4.11

    + features:
	+ initial support for OdfConverter on Win32 (Tor)
    + bug fixes:
	+ some fixes from Fedora (Rene)
	+ problem getting dbus connection second time (Radek)
	+ do not reopen the document after it is postprocessed (Petr)
	+ pre/post-processing capability for import/export fixes on Win32 (Tor)
	+ avoid ODMA error message with Save As on Win32 (Tor)
    + build bits:
	+ small clean up in the default symbol font fix (Michael)
	+ update Mandriva bits (Giuseppe)

ooo-build-2.0.4.10

    + features: