@@ -143,7 +143,10 @@ foreach my $app (keys %APPS) {
 
 # add the supported open XML file format suffixes
 if ($openxml) {
-    push @WRITERDOCS,"docx";
+    push @IMPRESSDOCS, "ppsm" , "ppsx" , "pptm" , "pptx", "potm" , "potx";
+    push @TEMPLATES, "dotm" , "dotx" , "potm" , "potx" , "xltm" , "xltx";
+    push @WRITERDOCS, "docm" , "docx" , "dotm" , "dotx";
+    push @CALCDOCS, "xlsb" , "xlsm" , "xlsx", "xltm" , "xltx";
 }
 
 sub print_suffixes_check {
