@@ -8,7 +8,7 @@ Icon=ooo-impress@OOO_BINSUFFIX@.png
 Type=Application
 Categories=Office;Presentation
 StartupNotify=@STARTUPNOTIFY@
-MimeType=application/vnd.oasis.opendocument.presentation;application/vnd.oasis.opendocument.presentation-template;application/vnd.sun.xml.impress;application/vnd.sun.xml.impress.template;application/vnd.stardivision.impress;application/mspowerpoint;application/vnd.ms-powerpoint
+MimeType=application/vnd.oasis.opendocument.presentation;application/vnd.oasis.opendocument.presentation-template;application/vnd.sun.xml.impress;application/vnd.sun.xml.impress.template;application/vnd.stardivision.impress;application/mspowerpoint;application/vnd.ms-powerpoint@ADD_OPENXML_PRESENTATION_MIME@
 InitialPreference=5
 _Name=OpenOffice.org Impress
 _GenericName=Presentation
