@@ -1,3 +1,11 @@
+ooo-build-2.0.4.17
+
+    + bug fixes:
+	+ fix the pre/post-processing capability for signed documents (Florian)
+	+ optionally associate more OpenXML file formats (Petr)
+    + Win32 build (Tor):
+	+ bin odf-converter stuff; will be available as an separate extension
+
 ooo-build-2.0.4.16
 
     + bug fixes:
